--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+0.94
+- Emptied default profile joystick configuration so it works properly with keyboard if no joystick is connected (Has to configure joystick in menus)
 0.93
 - Fixed registry keys deletion in game uninstaller
 - Removed compatibility mode from both launcher and game executable (it didn't achieve anything)
