--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+0.95
+- Made the player profile only copy on windows. On wine you need a fresh profile to make the joystick work
 0.94
 - Emptied default profile joystick configuration so it works properly with keyboard if no joystick is connected (Has to configure joystick in menus)
 0.93
